--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,18 @@
+@font-face {
+  font-family: 'MyFont';
+  src: url('../public/Motter\ Corpus\ Std\ Condensed.otf') format('OpenType');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'MyFont', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  letter-spacing: 0.1rem;
 }
 
 code {
