--- a/src/App.css
+++ b/src/App.css
@@ -6,10 +6,24 @@ html, body, #root {
   color: white;
 }
 
+.App {
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+}
+
 .container-column {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+
+.container-column-centered {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
   height: 100%;
   width: 100%;
@@ -62,6 +76,8 @@ footer {
 .pfp {
   width: 4rem;
   border-radius: 10rem;
+  position: absolute;
+  left: 1.5rem;
 }
 
 .chat-item {
@@ -73,4 +89,47 @@ footer {
 .large-text {
   text-align: center;
   font-size: 4.5rem;
+}
+
+.textbox {
+  position: absolute;
+  bottom: 1.5rem;
+  left: 1.5rem;
+  width: 60vw;
+  font-size: 1.3rem;
+  height: 2rem;
+  background-color: rgba(0,74,173,255);
+  border-radius: 5rem;
+  padding: 1rem;
+  color: white;
+}
+
+.textbox-design {
+  width: 60vw;
+  font-size: 1.3rem;
+  height: 2rem;
+  background-color: rgba(0,74,173,255);
+  border-radius: 5rem;
+  padding: 1rem;
+  color: white;
+}
+
+.button {
+  position: absolute;
+  bottom: 1.5rem;
+  right: 1.5rem;
+  border-radius: 10rem;
+  width: 4rem;
+  height: 4rem;
+  font-size: 2rem;
+  background-color: rgba(0,74,173,255);
+  margin-left: 1rem;
+}
+
+.curriculum-button {
+  color: white;
+  background-color: rgba(0,74,100,255);
+  font-size: 1.5rem;
+  padding: 1rem;
+  border-radius: 1rem;
 }
