--- a/src/index.css
+++ b/src/index.css
@@ -5,14 +5,20 @@
   font-style: normal;
 }
 
-body {
+header {
   margin: 0;
   font-family: 'MyFont', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  letter-spacing: 0.1rem;
+  letter-spacing: 0.15rem;
+}
+
+body {
+  font-family: monospace;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 code {
