--- a/src/App.css
+++ b/src/App.css
@@ -6,17 +6,12 @@ html, body, #root {
   color: white;
 }
 
-.App {
-  margin-top: 4rem;
-  margin-bottom: 4rem;
-}
-
 .container-column {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  height: 100%;
+  height: 75%;
   width: 100%;
 }
 
@@ -98,7 +93,9 @@ footer {
   width: 60vw;
   font-size: 1.3rem;
   height: 2rem;
-  background-color: rgba(0,74,173,255);
+  /* background-color: rgba(0,74,173,255); */
+  background-color: #d9d9e974;
+  border: 5px solid rgba(0,74,173,255);
   border-radius: 5rem;
   padding: 1rem;
   color: white;
@@ -108,13 +105,35 @@ footer {
   width: 60vw;
   font-size: 1.3rem;
   height: 2rem;
-  background-color: rgba(0,74,173,255);
+  border-color: rgba(0,74,173,255);
+  border-width: 0.3rem;
+  outline: none;
   border-radius: 5rem;
   padding: 1rem;
-  color: white;
+  text-align: center;
+}
+
+.input-container {
+  position: relative;
+  display: inline-block;
+}
+
+.numpad-icon {
+  position: absolute; /* Position relative to the container */
+  left: 1.5rem; /* Adjust as needed */
+  bottom: 1rem;
+  width: 2.5rem; /* Adjust size as needed */
+  pointer-events: none; /* Allows clicks to pass through the SVG */
+}
+
+.textbox-design {
+  padding-left: 30px; /* Adjust padding to accommodate the icon */
 }
 
 .button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: absolute;
   bottom: 1.5rem;
   right: 1.5rem;
@@ -122,7 +141,8 @@ footer {
   width: 4rem;
   height: 4rem;
   font-size: 2rem;
-  background-color: rgba(0,74,173,255);
+  background-color: #d9d9e974;
+  border: 5px solid rgba(0,74,173,255);
   margin-left: 1rem;
 }
 
@@ -201,22 +221,78 @@ button, input[type="button"], input[type="submit"] {
 .fade-out {
   opacity: 0;
   transform: translateY(-20px); /* Optional: move up slightly */
-  transition: opacity 0.3s, transform 0.3s;
+  transition: opacity 1s, transform 1s;
 }
 
 .fade-in {
   opacity: 1;
   transform: translateY(0);
-  transition: opacity 0.3s, transform 0.3s;
+  transition: opacity 1s, transform 1s;
 }
 
 .fade-in-from-bottom {
   opacity: 1;
   transform: translateY(0);
-  transition: opacity 0.3s, transform 0.3s;
+  transition: opacity 0.5s, transform 0.5s;
 }
 
 .fade-start-bottom {
   opacity: 0;
   transform: translateY(20px);
+}
+
+
+.App {
+  display: flex;
+  flex-direction: column; /* Stack children vertically */
+  min-height: 100vh; /* Ensure the App takes up at least the full viewport height */
+}
+
+header {
+  /* Add any header-specific styles here */
+  /* background-color: #333; Example header background */
+  color: white;
+  /* padding: 10px; */
+  width: 100%;
+}
+
+.container-row {
+  display: flex;
+  flex-direction: row;
+  align-items: center; /* Vertically align items in the row */
+}
+
+.container-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.padding-v {
+  padding: 10px 0; /* Vertical padding */
+}
+
+.white-text {
+  color: white;
+}
+
+/* Ensure Routes content takes up remaining space */
+.Routes {
+    flex-grow: 1;
+}
+
+.lecture {
+  width: 100%;
+  height: 50%;
+}
+
+.chptr {
+  width: 80% !important;
+  background-color: teal !important;
+}
+
+.callIcon {
+  position: absolute;
+  right: 1rem;
+  width: 3.5rem;
+  top: 8rem;
 }
