--- a/src/App.css
+++ b/src/App.css
@@ -33,16 +33,11 @@ html, body, #root {
 }
 
 header {
-  /* width: 100%; */
-  /* position: absolute; */
-  /* top: 0; */
-  background-color: rgba(0,74,173,255);
-}
-
-footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
+  position: fixed;
+  top: env(safe-area-inset-top);
+  left: 0;
+  right: 0;
+  z-index: 1000; /* Ensure it's above other elements */
   background-color: rgba(0,74,173,255);
 }
 
